<resources>
    <string name="app_name">ar_final_project</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="login">Log in</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="item1">Item 1</string>
    <string name="item1p" translatable="false">$ 30.000</string>
    <string name="item2">Item 2</string>
    <string name="item2p" translatable="false">$ 15.300</string>
    <string name="item3">Item 3</string>
    <string name="item3p" translatable="false">$ 12.000</string>
    <string name="about1">Made by</string>
    <string name="about2" translatable="false">Luis Bastidas - cod: 219034039</string>
    <string name="about3" translatable="false">Daniel Fino - cod: 219034167</string>
    <string name="about4">Mobile development</string>
    <string name="loginb">Go</string>
    <string name="forgot">Forgot my password</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="emtyfields">Empty fields!</string>
    <string name="badpassword">Passwords doesn\'t match</string>
    <string name="search">Search</string>
    <string name="usercreated">User created!</string>
    <string name="upload">Upload</string>
    <string name="account">Account</string>
    <string name="price">Price</string>
    <string name="quant">Quantity</string>
    <string name="img">Image</string>
    <string name="model">3d model</string>
    <string name="uploadp">Upload product</string>
    <string name="upload_img">Upload image</string>
    <string name="upload_mod">Upload 3d model</string>
    <string name="buy">Buy</string>
    <string name="watch_in_nar">Watch in\nAR</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Log Out</string>
    <string name="delete">Delete\nuser</string>
    <string name="myprodts">My products</string>
    <string name="products">Products</string>
    <string name="detailprice">"price: "</string>
    <string name="detailquantity">"quantity: "</string>
    <string name="uploaded_by">"Uploaded by: "</string>
    <string name="edit">Edit</string>
    <string name="detailname">"name: "</string>
    <string name="sold_out">Sold out</string>

</resources>