<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".About">
    <!-- Top Banner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:background="@color/green">
        <!-- Home -->
        <TextView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textAlignment="center"/>
        <!-- Log In -->
        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textAlignment="center" />
        <!-- Settings -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textAlignment="center" />
        <!-- About -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textAlignment="center"
            android:background="@color/light_green"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about1"
            android:textColor="@color/light_green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about2"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about3"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about4"
            android:textColor="@color/light_green"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</LinearLayout>