<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".Login">
    <!-- Top Banner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:background="@color/green">
        <!-- Home -->
        <TextView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textAlignment="center"/>
        <!-- Log In -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textAlignment="center"
            android:background="@color/light_green"/>
        <!-- Settings -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textAlignment="center" />
        <!-- About -->
        <TextView
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="32dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/light_green"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/light_green"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/userpass"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            android:layout_marginBottom="32dp"
            android:inputType="textPassword"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/blogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginb"
            android:background="@color/green" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/light_green"
                android:layout_marginEnd="32dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textColor="@color/light_green" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>