<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Upload"
    android:layout_marginLeft="50sp"
    android:layout_marginRight="50sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadp"
        android:textSize="28dp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"
        android:textColor="@color/light_green"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="right"
            android:layout_marginRight="8sp"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginRight="8sp"/>
        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quant"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginRight="8sp"/>
        <EditText
            android:id="@+id/quant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/img"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/imageb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_img"
            android:textColor="@color/white"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="8sp"
            android:textSize="12sp"
            android:background="@drawable/select_button"
            android:onClick="selectImage"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/modelb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_mod"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="8sp"
            android:background="@drawable/select_button"
            android:onClick="selectModel"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uploadb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textColor="@color/gray"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corners_button" />

</androidx.appcompat.widget.LinearLayoutCompat>