<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="32dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="28dp"
            android:layout_marginBottom="32dp"
            android:textColor="@color/light_green"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/userpass"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/confirmpassword"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/confirmuserpass"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="64dp"
            android:inputType="textPassword"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/blogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginb"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corners_button" />
    </LinearLayout>
</LinearLayout>