<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MyProductDetail">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16sp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_margin="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15sp"
            android:elevation="10dp">
            <ImageView
                android:id="@+id/img"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailname"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <EditText
                android:id="@+id/name"
                android:layout_width="140sp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="16sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailprice"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <EditText
                android:id="@+id/price"
                android:layout_width="140sp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="32sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailquantity"
                android:textSize="16sp"
                android:textColor="@color/white" />
            <EditText
                android:id="@+id/quant"
                android:layout_width="140sp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="save"
                android:textColor="@color/gray"
                android:background="@drawable/rounded_corners_button"
                android:layout_marginRight="32sp"
                android:textStyle="bold"
                android:padding="8sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cancel"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:background="@drawable/rounded_corners_button" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="delete"
            android:textColor="@color/white"
            android:layout_margin="16sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_corners_red" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>